# camera-self-calibration

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: calibrator.hpp  chessboardcalibrator.hpp  selfcalibrator.hpp
maxima/: calc_ni_nj.wxmx  cform.lisp  derivative.wxmx  homography.wxmx  initial_guess.wxmx
src/: calibrator.cpp  chessboardcalibrator.cpp  main.cpp  selfcalibrator.cpp
